--- a/main.css
+++ b/main.css
@@ -2,4 +2,45 @@ body {
     font-family: "Nanum Gothic Coding", monospace;
     font-weight: 500;
     font-style: normal;
+    background-color: aliceblue;
+}
+
+header {
+    text-align: center;
+    font-size: 30px;
+}
+
+.machine {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+.machine_title {
+    color: green;
+    margin-top:15px;
+}
+
+.extract-btn {
+    width : 100px;
+    margin-top:13px;
+    margin-bottom: 50px;
+}
+
+.user {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.status {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 200px;
+    font-weight: 600;
+}
+
+.status_msg {
+    color:red;
 }
