--- a/main.css
+++ b/main.css
@@ -34,11 +34,9 @@ header {
 
 .status {
     display:flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    height: 200px;
-    font-weight: 600;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .status_msg {
