--- a/templates/main.html
+++ b/templates/main.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./static/css/main.css" />
   </head>
   <body>
     <header>로또 시뮬레이션</header>
@@ -40,7 +40,7 @@
     <div id="container"></div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="main.js"></script>
+  <script src="./static/js/main.js"></script>
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/modules/exporting.js"></script>
   <script src="https://code.highcharts.com/modules/accessibility.js"></script>
