--- a/templates/main.html
+++ b/templates/main.html
@@ -13,7 +13,15 @@
     <link rel="stylesheet" href="./static/css/main.css" />
   </head>
   <body>
-    <header>로또 시뮬레이션</header>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="/">추첨화면</a></li>
+          <li><a href="test">최근번호분석</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="title">로또 시뮬레이션</div>
     <div class="machine">
       <span class="machine_title">기계의 선택</span><br />
       <div>
@@ -33,9 +41,9 @@
     </div>
     <div class="status">
       <p class="status_msg"></p>
-      <span>맞춘갯수:   <span class="correct_count"></span></span>
-      <span>등수:  <span class="rank"></span></span>
-      <span>당첨확률(%):<span  class="percent"></span></span>
+      <span>맞춘갯수: <span class="correct_count"></span></span>
+      <span>등수: <span class="rank"></span></span>
+      <span>당첨확률(%):<span class="percent"></span></span>
     </div>
     <div id="container"></div>
   </body>
